fix: scrollbar handler bug on the first start

--- a/src/styles/components/_cards-content.scss
+++ b/src/styles/components/_cards-content.scss
@@ -6,7 +6,9 @@
   flex-wrap: wrap;
   gap: 3em 2em;
   grid-row: 2;
-
+  @media screen and (max-width: $mobile) {
+    gap: 0;
+  }
   .card__content {
     display: flex;
     flex-direction: column;
@@ -128,33 +130,56 @@
   }
 }
 .card__content_category {
-  padding: 5rem;
+  width: 100%;
   transition: all 0.3s ease;
-}
-.category-view {
-  position: relative;
-  padding: 2rem;
-  overflow: hidden;
-  .category-overlay {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    transition: all 0.3s ease;
 
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    
-    
-    &.active {
-      background-color: rgba(0, 0, 0, 0.5);
+  @media screen and (max-width: $tablet) {
+    padding: 0;
+  }
+  
+  .product__cards.category-view {
+    gap: 0;
+    padding: 1.5rem 0;
+    .card__content {
+      margin-top: 0;
+      &:nth-child(n + 5) {
+        display: none;
+      }
+  
+      @media screen and (max-width: $tablet) {
+        width: 15%;
+        display: block;
+        &:nth-child(n + 5) {
+          display: block;
+        }
+      }
     }
   }
-
-  .blured {
-    transform: scale(101%);
-    filter: blur(1.2px);
-    filter: grayscale(50);
+  
+  .category-view {
+    position: relative;
+    overflow: hidden;
+    .category-overlay {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      transition: all 0.3s ease;
+  
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      
+      
+      &.active {
+        background-color: rgba(0, 0, 0, 0.5);
+      }
+    }
+  
+    .blured {
+      transform: scale(101%);
+      filter: blur(1.2px);
+      filter: grayscale(50);
+    }
   }
 }
 
@@ -163,6 +188,14 @@
   font-weight: 700;
   color: $color-active-link;
   transition: opacity 0.4s ease-in-out;
+
+  @media screen and (max-width: 1100px) {
+    font-size: 2em;
+  }
+
+  @media screen and (max-width: $tablet) {
+    font-size: 1.5em;
+  }
   &.hidden {
     display: inline;
     opacity: 0;
@@ -180,11 +213,11 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  padding: 0.5rem;
 
   .bc-nav_item {
     color: $color-login-background;
     font-size: 2.2rem;
-    padding: 0.5rem;
 
     &::after {
       content: ' > '
