--- a/src/styles/layouts/_footer.scss
+++ b/src/styles/layouts/_footer.scss
@@ -10,6 +10,7 @@ footer {
   display: flex;
   align-items: center;
   justify-content: space-around;
+  padding: 0;
 }
 
 .footer__wrapper_logo, .footer__wrapper_text {
@@ -23,4 +24,10 @@ footer {
   background-repeat: no-repeat;
   background-size: 100%;
   background-position: 0 0;
+}
+
+@media screen and (max-width: $tablet) {
+  .footer__wrapper_text {
+    font-size: 1.5rem;
+  }
 }
