--- a/src/styles/pages/_catalog.scss
+++ b/src/styles/pages/_catalog.scss
@@ -3,7 +3,7 @@
   grid-template-areas: 'search bc bc'
                         'catalog-aside cards cards'
                         'footer footer footer';
-  grid-template-columns: 1fr 4fr auto;
+  grid-template-columns: 0.6fr 4fr auto;
   position: relative;
 }
 
